# xmrsigner

./: .profile  CONTRIBUTING.md  GEMINI.md  LIVE_QR_SCANNER.md  Makefile  QWEN.md  README.md  Todo.md  analyze_frames.py  debug_cake_wallet_qr.py  debug_qr_logo_scan.py  debug_qr_scan.py  main.py  pyproject.toml  test_qr_decoding.py  test_wallet_fix.py
enclosures/XmrSigner_enclosure/: README.md  XmrSIGNER Top.3mf  XmrSIGNER-Bottom.3mf  XmrSIGNER-Buttons.stl  XmrSigner_Joystick.stl  XmrSigner_Joystick_lower.stl  XmrSigner_Trackball.stl
src/test/xmrsigner/helpers/: monero_time.py
src/xmrsigner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xmrsigner/gui/: button_data.py
src/xmrsigner/gui/screens/: scan_screens.py  tx_screens.py
src/xmrsigner/helpers/: cake_wallet_qr_scanner.py  compactseed.py  live_qr_scanner.py  monero.py  network.py  wallet.py
src/xmrsigner/helpers/ur2/: fountain_decoder.py  ur_decoder.py
src/xmrsigner/models/: decode_qr.py  seed.py  seed_decoder.py  settings_definition.py  tx_decoder.py  tx_parser.py
src/xmrsigner/views/: scan_views.py  seed_views.py  tools_views.py  tx_views.py  wallet_views.py
tests/: test_cake_wallet_qr_scanner.py  test_change_network.py  test_change_network_method.py  test_seed.py  test_seed_network.py  test_seedqr.py  test_transaction_flow.py  test_tx_parser_integration.py  test_txparser.py  test_ur_parsing.py  test_wallet_network.py
tools/: create_image_buster.sh
